--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,11 @@
                 "input": "src/themes/dspace/styles/theme.scss",
                 "inject": false,
                 "bundleName": "dspace-theme"
+              },
+              {
+                "input": "src/themes/drum/styles/theme.scss",
+                "inject": false,
+                "bundleName": "drum-theme"
               }
             ],
             "scripts": []
