LIBDRUM-658. Added Citation, Advisor, and DRUM DOI fields.
* Made the DRUM DOI a link
* Added English labels for "Advisor" and "DRUM DOI"

https://issues.umd.edu/browse/LIBDRUM-658

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -1930,6 +1930,8 @@
 
   "item.page.abstract": "Abstract",
 
+  "item.page.advisor": "Advisor",
+
   "item.page.author": "Authors",
 
   "item.page.citation": "Citation",
@@ -1941,6 +1943,8 @@
   "item.page.collections.load-more": "Load more",
 
   "item.page.date": "Date",
+
+  "item.page.doi": "DRUM DOI",
 
   "item.page.edit": "Edit this item",
 
