--- a/src/themes/drum/assets/i18n/en.json5
+++ b/src/themes/drum/assets/i18n/en.json5
@@ -1,4 +1,6 @@
 {
     "menu.header.organization.logo": "UMD Libraries",
     "menu.header.image.logo": "DRUM",
+    "item.page.doi": "DRUM DOI",
+    "item.page.advisor": "Advisor"
 }
