LIBDRUM-657. Initial CAS login setup
Used the Shibboleth login code as a template for setting up
CAS login code.

https://issues.umd.edu/browse/LIBDRUM-657

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -2244,6 +2244,8 @@
 
   "login.form.password": "Password",
 
+  "login.form.cas": "Log in with CAS",
+
   "login.form.shibboleth": "Log in with Shibboleth",
 
   "login.form.submit": "Log in",
