LIBDRUM-697. Added "Web Accessibility" and "Give Now" links to footer
Added links for "Web Accessibility" and "Give Now" (with I18n text) to
the bottom footer.

https://issues.umd.edu/browse/LIBDRUM-697

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -1458,6 +1458,11 @@
 
   "footer.link.feedback":"Send Feedback",
 
+  // Customization for LIBDRUM-697
+  "footer.link.umd-give-now":"Give Now",
+
+  "footer.link.umd-web-accessibility":"Web Accessibility",
+  // End customization for LIBDRUM-697
 
 
   "forgot-email.form.header": "Forgot Password",
