LIBDRUM-664. Community list page customization.
- Customize the community-list components to use CommunityGroupDataService as the datasource.
- Customize the comunity-list-page component to include two instances of the community-list components for the two community-groups based community list.

https://issues.umd.edu/browse/LIBDRUM-664

--- a/src/themes/drum/assets/i18n/en.json5
+++ b/src/themes/drum/assets/i18n/en.json5
@@ -2,5 +2,7 @@
     "menu.header.organization.logo": "UMD Libraries",
     "menu.header.image.logo": "DRUM",
     "item.page.doi": "DRUM DOI",
-    "item.page.advisor": "Advisor"
+    "item.page.advisor": "Advisor",
+    "community.group.faculty.title": "Collections Organized by Department",
+    "community.group.um.title": "UM Community-managed Collections",
 }
