--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -315,6 +315,22 @@
 
   "admin.access-control.epeople.form.goToGroups": "Add to groups",
 
+  // UMD Customization for LIBDRUM-660
+  "admin.access-control.epeople.form.ldap.title": "UM Directory Information",
+
+  "admin.access-control.epeople.form.ldap.name": "Name:",
+
+  "admin.access-control.epeople.form.ldap.email": "Email:",
+
+  "admin.access-control.epeople.form.ldap.phone": "Phone:",
+
+  "admin.access-control.epeople.form.ldap.faculty": "Faculty:",
+
+  "admin.access-control.epeople.form.ldap.umAppointment": "UM Appt:",
+
+  "admin.access-control.epeople.form.ldap.groups": "Groups:",
+  // End UMD Customization for LIBDRUM-660
+
   "admin.access-control.epeople.notification.deleted.failure": "Failed to delete EPerson: \"{{name}}\"",
 
   "admin.access-control.epeople.notification.deleted.success": "Successfully deleted EPerson: \"{{name}}\"",
