LIBDRUM-669. Display matched/unmatched Units based on LDAP criteria
Building on the work done in LIBDRUM-660, modified the
"UM Directory Information" section of "Edit EPerson" to display
"matched" and "unmatched" Units an EPerson belongs to, based
on their LDAP criteria.

The following classes anticipate the "unit" front-end work being done
in LIBDRUM-676:

* src/app/core/eperson/models/unit.model.ts
* src/app/core/eperson/models/unit.resource-type.ts

https://issues.umd.edu/browse/LIBDRUM-669

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -315,7 +315,7 @@
 
   "admin.access-control.epeople.form.goToGroups": "Add to groups",
 
-  // UMD Customization for LIBDRUM-660
+  // UMD Customization for LIBDRUM-660/LIBDRUM-669
   "admin.access-control.epeople.form.ldap.title": "UM Directory Information",
 
   "admin.access-control.epeople.form.ldap.name": "Name:",
@@ -329,7 +329,11 @@
   "admin.access-control.epeople.form.ldap.umAppointment": "UM Appt:",
 
   "admin.access-control.epeople.form.ldap.groups": "Groups:",
-  // End UMD Customization for LIBDRUM-660
+
+  "admin.access-control.epeople.form.ldap.matchedUnits": "Units:",
+
+  "admin.access-control.epeople.form.ldap.unmatchedUnits": "Unmatched Units:",
+  // End UMD Customization for LIBDRUM-660/LIBDRUM-669
 
   "admin.access-control.epeople.notification.deleted.failure": "Failed to delete EPerson: \"{{name}}\"",
 
