LIBDRUM-676. Update for "New Unit" page breadcrumb and HTML title
Added I18n text to ensure that the "New Unit" page shows the correct
breadcrumb, and that the HTML title in the browser tab is correct.

Also added "admin.access-control.units.title.singleUnit" so that the
HTML title in the browser tab is correct.

https://issues.umd.edu/browse/LIBDRUM-676

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -528,11 +528,11 @@
 
   "admin.access-control.units.singleUnit.breadcrumbs": "Edit Unit",
 
-//  "admin.access-control.units.title.singleGroup": "Edit Group",
-//
-//  "admin.access-control.units.title.addGroup": "New Group",
-//
-//  "admin.access-control.units.addGroup.breadcrumbs": "New Group",
+  "admin.access-control.units.title.singleUnit": "Edit Unit",
+
+  "admin.access-control.units.title.addUnit": "New Unit",
+
+  "admin.access-control.units.addUnit.breadcrumbs": "New Unit",
 
   "admin.access-control.units.head": "Units",
 
