LIBDRUM-676. Added group "Members" count to Unit search display
Updated the Unit search display to display a "Members" column to display
the number of groups in the Unit.

https://issues.umd.edu/browse/LIBDRUM-676

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -550,9 +550,7 @@
 
   "admin.access-control.units.table.name": "Name",
 
-//  "admin.access-control.units.table.collectionOrCommunity": "Collection/Community",
-//
-//  "admin.access-control.units.table.members": "Members",
+  "admin.access-control.units.table.members": "Members",
 
   "admin.access-control.units.table.edit": "Edit",
 
