LIBDRUM-676. Code cleanup
Removed unused imports, commented out code, fixed formatting, and
ensured modified DSpace 7 code had "UMD Customization" markers.

Pruned I18n settings, and fixed some I18n settings in
unit-group-list/unit-groups-list.component.ts

https://issues.umd.edu/browse/LIBDRUM-676

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -562,15 +562,9 @@
 
   "admin.access-control.units.notification.deleted.success": "Successfully deleted unit \"{{name}}\"",
 
-//  "admin.access-control.units.notification.deleted.failure.title": "Failed to delete group \"{{name}}\"",
-//
-//  "admin.access-control.units.notification.deleted.failure.content": "Cause: \"{{cause}}\"",
-//
-//
-//
-//  "admin.access-control.units.form.alert.permanent": "This group is permanent, so it can't be edited or deleted. You can still add and remove group members using this page.",
-//
-//  "admin.access-control.units.form.alert.workflowGroup": "This group can’t be modified or deleted because it corresponds to a role in the submission and workflow process in the \"{{name}}\" {{comcol}}. You can delete it from the <a href='{{comcolEditRolesRoute}}'>\"assign roles\"</a> tab on the edit {{comcol}} page. You can still add and remove group members using this page.",
+  "admin.access-control.units.notification.deleted.failure.title": "Failed to delete unit \"{{name}}\"",
+
+  "admin.access-control.units.notification.deleted.failure.content": "Cause: \"{{cause}}\"",
 
   "admin.access-control.units.form.head.create": "Create unit",
 
@@ -580,19 +574,15 @@
 
   "admin.access-control.units.form.facultyOnly": "Faculty Only",
 
-//  "admin.access-control.units.form.groupCommunity": "Community or Collection",
-//
-//  "admin.access-control.units.form.groupDescription": "Description",
-
   "admin.access-control.units.form.notification.created.success": "Successfully created Unit \"{{name}}\"",
 
   "admin.access-control.units.form.notification.created.failure": "Failed to create Unit \"{{name}}\"",
 
-//  "admin.access-control.units.form.notification.created.failure.groupNameInUse": "Failed to create Group with name: \"{{name}}\", make sure the name is not already in use.",
-//
-//  "admin.access-control.units.form.notification.edited.failure": "Failed to edit Group \"{{name}}\"",
-//
-//  "admin.access-control.units.form.notification.edited.failure.groupNameInUse": "Name \"{{name}}\" already in use!",
+  "admin.access-control.units.form.notification.created.failure.unitNameInUse": "Failed to create Unit with name: \"{{name}}\", make sure the name is not already in use.",
+
+  "admin.access-control.units.form.notification.edited.failure": "Failed to edit Unit \"{{name}}\"",
+
+  "admin.access-control.units.form.notification.edited.failure.unitNameInUse": "Name \"{{name}}\" already in use!",
 
   "admin.access-control.units.form.notification.edited.success": "Successfully edited Unit \"{{name}}\"",
 
@@ -608,9 +598,9 @@
 
   "admin.access-control.units.form.notification.deleted.success": "Successfully deleted unit \"{{ name }}\"",
 
-//  "admin.access-control.units.form.notification.deleted.failure.title": "Failed to delete group \"{{ name }}\"",
-//
-//  "admin.access-control.units.form.notification.deleted.failure.content": "Cause: \"{{ cause }}\"",
+  "admin.access-control.units.form.notification.deleted.failure.title": "Failed to delete unit \"{{ name }}\"",
+
+  "admin.access-control.units.form.notification.deleted.failure.content": "Cause: \"{{ cause }}\"",
 
   "admin.access-control.units.form.groups-list.head": "Groups",
 
@@ -620,83 +610,31 @@
 
   "admin.access-control.units.form.groups-list.headMembers": "Current Members",
 
-  "admin.access-control.units.form.groups-list.search.scope.metadata": "Metadata",
-
-//  "admin.access-control.units.form.members-list.search.scope.email": "E-mail (exact)",
-
   "admin.access-control.units.form.groups-list.search.button": "Search",
-
-//  "admin.access-control.units.form.members-list.table.id": "ID",
-//
-//  "admin.access-control.units.form.members-list.table.name": "Name",
-//
-//  "admin.access-control.units.form.members-list.table.identity": "Identity",
-//
-//  "admin.access-control.units.form.members-list.table.email": "Email",
-//
-//  "admin.access-control.units.form.members-list.table.netid": "NetID",
 
   "admin.access-control.units.form.groups-list.table.edit": "Remove / Add",
 
-//  "admin.access-control.units.form.members-list.table.edit.buttons.remove": "Remove member with name \"{{name}}\"",
+  "admin.access-control.units.form.groups-list.table.edit.buttons.remove": "Remove member with name \"{{name}}\"",
 
   "admin.access-control.units.form.groups-list.notification.success.addGroup": "Successfully added group: \"{{name}}\"",
 
-//  "admin.access-control.units.form.members-list.notification.failure.addMember": "Failed to add member: \"{{name}}\"",
+  "admin.access-control.units.form.groups-list.notification.failure.addGroup": "Failed to add group: \"{{name}}\"",
 
   "admin.access-control.units.form.groups-list.notification.success.deleteGroup": "Successfully deleted group: \"{{name}}\"",
 
-//  "admin.access-control.units.form.members-list.notification.failure.deleteMember": "Failed to delete member: \"{{name}}\"",
-//
-//  "admin.access-control.units.form.members-list.table.edit.buttons.add": "Add member with name \"{{name}}\"",
-//
-//  "admin.access-control.units.form.members-list.notification.failure.noActiveGroup": "No current active group, submit a name first.",
+  "admin.access-control.units.form.groups-list.notification.failure.deleteGroup": "Failed to delete group: \"{{name}}\"",
+
+  "admin.access-control.units.form.groups-list.table.edit.buttons.add": "Add member with name \"{{name}}\"",
+
+  "admin.access-control.units.form.groups-list.notification.failure.noActiveUnit": "No current active unit, submit a name first.",
 
   "admin.access-control.units.form.groups-list.no-groups-yet": "No groups in unit yet, search and add.",
-
-//  "admin.access-control.units.form.members-list.no-items": "No EPeople found in that search",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.failure": "Something went wrong: \"{{cause}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.head": "Groups",
-//
-//  "admin.access-control.units.form.subgroups-list.search.head": "Add Subgroup",
-//
-//  "admin.access-control.units.form.subgroups-list.button.see-all": "Browse All",
-//
-//  "admin.access-control.units.form.subgroups-list.headSubgroups": "Current Subgroups",
-//
-//  "admin.access-control.units.form.subgroups-list.search.button": "Search",
 
   "admin.access-control.units.form.groups-list.table.id": "ID",
 
   "admin.access-control.units.form.groups-list.table.name": "Name",
 
   "admin.access-control.units.form.groups-list.table.collectionOrCommunity": "Collection/Community",
-
-//  "admin.access-control.units.form.subgroups-list.table.edit": "Remove / Add",
-//
-//  "admin.access-control.units.form.subgroups-list.table.edit.buttons.remove": "Remove subgroup with name \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.table.edit.buttons.add": "Add subgroup with name \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.table.edit.currentGroup": "Current group",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.success.addSubgroup": "Successfully added subgroup: \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.failure.addSubgroup": "Failed to add subgroup: \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.success.deleteSubgroup": "Successfully deleted subgroup: \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.failure.deleteSubgroup": "Failed to delete subgroup: \"{{name}}\"",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.failure.noActiveGroup": "No current active group, submit a name first.",
-//
-//  "admin.access-control.units.form.subgroups-list.notification.failure.subgroupToAddIsActiveGroup": "This is the current group, can't be added.",
-//
-//  "admin.access-control.units.form.subgroups-list.no-items": "No groups found with this in their name or this as UUID",
-//
-//  "admin.access-control.units.form.subgroups-list.no-subgroups-yet": "No subgroups in group yet.",
 
   "admin.access-control.units.form.return": "Back",
   // End UMD Customization
