LIBDRUM-679. Embargo List setup with placeholder page
Initial setup of an "Embargo List" page, with a placeholder page.

https://issues.umd.edu/browse/LIBDRUM-679

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -4996,5 +4996,9 @@
   "community_group.faculty.title": "Collections Organized by Department",
 
   "community_group.um.title": "UM Community-managed Collections",
+
+  "embargo-list.breadcrumbs": "Embargo List",
+
+  "embargo-list.title": "Embargo List",
   // End UMD Customization
 }
