LIBDRUM-679. Implementation of Embargo List CSV Export button
Added an "Export embargo list as CSV" button, which calls the
"embargo-list-export" script.

Modeled on the "src/app/shared/search/search-export-csv/"
functionality.

https://issues.umd.edu/browse/LIBDRUM-679

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5000,5 +5000,11 @@
   "embargo-list.breadcrumbs": "Embargo List",
 
   "embargo-list.title": "Embargo List",
+
+  "embargo-list-export-csv.tooltip": "Export embargo list as CSV",
+
+  "embargo-list-export-csv.submit.success": "The export was started successfully",
+
+  "embargo-list-export-csv.submit.error": "Starting the export has failed",
   // End UMD Customization
 }
