LIBDRUM-679. Implemented "embargo-list" to display Embargo List table
Added "embargo-list" component that shows the embargoed entries in a
table.

Modeled after the "health-info" component.

https://issues.umd.edu/browse/LIBDRUM-679

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5006,5 +5006,7 @@
   "embargo-list-export-csv.submit.success": "The export was started successfully",
 
   "embargo-list-export-csv.submit.error": "Starting the export has failed",
+
+  "embargo-list.error.msg": "The embargo list is temporarily unavailable",
   // End UMD Customization
 }
