--- a/config/config.yml
+++ b/config/config.yml
@@ -21,3 +21,7 @@ themes:
 # LIBDRUM-666 - Add PRESERVATION to default standard bundles list
 bundle:
   standardBundles: [ ORIGINAL, THUMBNAIL, LICENSE, PRESERVATION ]
+
+# Disable End User Agreement
+info:
+  enableEndUserAgreement: false
