LIBDRUM-671.ETD Department management UI implementation.
https://issues.umd.edu/browse/LIBDRUM-671

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -637,6 +637,120 @@
   "admin.access-control.units.form.groups-list.table.collectionOrCommunity": "Collection/Community",
 
   "admin.access-control.units.form.return": "Back",
+
+  "admin.core.etdunits.title": "Etdunits",
+
+  "admin.core.etdunits.breadcrumbs": "Etdunits",
+
+  "admin.core.etdunits.singleEtdUnit.breadcrumbs": "Edit Etdunit",
+
+  "admin.core.etdunits.title.singleEtdUnit": "Edit Etdunit",
+
+  "admin.core.etdunits.title.addEtdUnit": "New Etdunit",
+
+  "admin.core.etdunits.addEtdUnit.breadcrumbs": "New Etdunit",
+
+  "admin.core.etdunits.head": "Etdunits",
+
+  "admin.core.etdunits.button.add": "Add etdunit",
+
+  "admin.core.etdunits.search.head": "Search etdunits",
+
+  "admin.core.etdunits.button.see-all": "Browse all",
+
+  "admin.core.etdunits.search.button": "Search",
+
+  "admin.core.etdunits.search.placeholder": "Search etdunits...",
+
+  "admin.core.etdunits.table.id": "ID",
+
+  "admin.core.etdunits.table.name": "Name",
+
+  "admin.core.etdunits.table.members": "Members",
+
+  "admin.core.etdunits.table.edit": "Edit",
+
+  "admin.core.etdunits.table.edit.buttons.edit": "Edit \"{{name}}\"",
+
+  "admin.core.etdunits.table.edit.buttons.remove": "Delete \"{{name}}\"",
+
+  "admin.core.etdunits.no-items": "No etdunits found with this in their name or this as UUID",
+
+  "admin.core.etdunits.notification.deleted.success": "Successfully deleted etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.notification.deleted.failure.title": "Failed to delete etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.notification.deleted.failure.content": "Cause: \"{{cause}}\"",
+
+  "admin.core.etdunits.form.head.create": "Create etdunit",
+
+  "admin.core.etdunits.form.head.edit": "Edit etdunit",
+
+  "admin.core.etdunits.form.etdunitName": "Etdunit name",
+
+  "admin.core.etdunits.form.notification.created.success": "Successfully created Etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.form.notification.created.failure": "Failed to create Etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.form.notification.created.failure.unitNameInUse": "Failed to create Etdunit with name: \"{{name}}\", make sure the name is not already in use.",
+
+  "admin.core.etdunits.form.notification.edited.failure": "Failed to edit Etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.form.notification.edited.failure.unitNameInUse": "Name \"{{name}}\" already in use!",
+
+  "admin.core.etdunits.form.notification.edited.success": "Successfully edited Etdunit \"{{name}}\"",
+
+  "admin.core.etdunits.form.actions.delete": "Delete Etdunit",
+
+  "admin.core.etdunits.form.delete-etdunit.modal.header": "Delete Etdunit \"{{ dsoName }}\"",
+
+  "admin.core.etdunits.form.delete-etdunit.modal.info": "Are you sure you want to delete Etdunit \"{{ dsoName }}\"",
+
+  "admin.core.etdunits.form.delete-etdunit.modal.cancel": "Cancel",
+
+  "admin.core.etdunits.form.delete-etdunit.modal.confirm": "Delete",
+
+  "admin.core.etdunits.form.notification.deleted.success": "Successfully deleted etdunit \"{{ name }}\"",
+
+  "admin.core.etdunits.form.notification.deleted.failure.title": "Failed to delete etdunit \"{{ name }}\"",
+
+  "admin.core.etdunits.form.notification.deleted.failure.content": "Cause: \"{{ cause }}\"",
+
+  "admin.core.etdunits.form.return": "Back",
+
+  "admin.core.etdunits.form.collection-mapper.search-form.placeholder": "Search collections...",
+
+  "admin.core.etdunits.form.collection-mapper.buttons.add": "Map selected collections to etdunit",
+
+  "admin.core.etdunits.form.collection-mapper.buttons.remove": "Remove mapping for selected collections from etdunit",
+
+  "admin.core.etdunits.form.collection-mapper.cancel": "Cancel",
+
+  "admin.core.etdunits.form.collection-mapper.description": "This is the collection mapper tool that allows administrators to map collections to etdunit. You can search for collections and map them, or browse the list of collections currently mapped to the etdunit.",
+
+  "admin.core.etdunits.form.collection-mapper.mapped-collections.head": "Collections mapped to this EtdUnit",
+
+  "admin.core.etdunits.form.collection-mapper.head": "Available Collections to map to EtdUnit",
+
+  "admin.core.etdunits.form.collection-mapper.etdunit": "EtdUnit: \"<b>{{name}}</b>\"",
+
+  "admin.core.etdunits.form.collection-mapper.no-search": "Please enter a query to search",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.add.error.content": "Errors occurred for mapping of {{amount}} collections to etdunit.",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.add.error.head": "Mapping errors",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.add.success.content": "Successfully mapped {{amount}} collections to etdunit.",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.add.success.head": "Mapping completed",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.remove.error.content": "Errors occurred for the removal of {{amount}} collections mapping.",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.remove.error.head": "Removal of mapping errors",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.remove.success.content": "Successfully removed mapping of {{amount}} collections from etdunit.",
+
+  "admin.core.etdunits.form.collection-mapper.notifications.remove.success.head": "Removal of mapping completed",
   // End UMD Customization
 
 
@@ -2938,6 +3052,7 @@
   // UMD Customizations
   "menu.section.drum_customizations": "DRUM Customizations",
   "menu.section.drum_customizations_embargo_list": "Embargo List",
+  "menu.section.drum_customizations_etdunits": "ETD Departments",
   // End UMD Customizations
 
   "metadata-export-search.tooltip": "Export search results as CSV",
